# OJHacker

./: .gitignore  README.md  generators.py  images.py  main.py  pyproject.toml
src/: _generators.py  auxi.py  config.py  constants.py  generators.py  images.py  main.py  testcases.py
src/cogs/: admin.py  fun.py  oj.py  ojc.py
src/generators/: __init__.py  _genTemplate.py  genLE09.py  genLE10.py  genLE11.py  genLE12.py  genPA04.py  genPA05.py  genPA06.py  genPA07.py  genPA08.py  locations.py  names.py  readme.md
src/solutions/: README.md  __init__.py  _solutionTemplate.py  ansLE09.py  ansLE10.py  ansLE11.py  ansLE12.py  ansPA04.py  ansPA05.py  ansPA06.py  ansPA07.py  ansPA08.py  ansPA09.py
src/utils/: __init__.py  get_inputs.py  print_tc.py  show_instructions.py  wait_response.py  wait_thumbsup.py
