[tool.poetry]
name = "ojhacker"
authors = [ "Gab Samonte", "Justin Frongoso", "Miko Surara", "Basti Ortiz", "Shann Aurelle Ripalda", "Michael Monasterial" ]
description = "Discord Bot for CS 12 OJ Programming Problems"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
flask = "^1.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"